<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:title="Inicio"/>

        <item android:id="@+id/nav_doctrina"
            android:title="@string/doctrina"/>

        <item android:id="@+id/nav_convicciones"
            android:title="@string/convicciones"/>

        <item android:id="@+id/nav_favoritos"
            android:title="@string/favoritos"/>

        </group>

        <group android:checkableBehavior="single"
            android:id="@+id/group2">

            <item android:id="@+id/nav_youtube"
                android:title="@string/youtube"/>

            <item android:id="@+id/nav_contacto"
                android:title="@string/contacto2"/>

            <item android:id="@+id/nav_about"
                android:title="Acerca de"/>
        </group>

</menu>