<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutNoRed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NoRedActivity"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNoRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarNoRed"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="220dp"
            android:layout_height="134dp"
            android:layout_marginTop="70dp"
            app:srcCompat="@drawable/nubetriste" />

        <TextView
            android:layout_width="292dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/oops"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="242dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/nosenal"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNoRedx"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#F2F3F4"
            android:onClick="botonNoRed"
            android:text="@string/volerintentar"
            android:padding="10dp"
            android:textColor="#808080"/>

    </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/idNavigationViewNoRed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>